chore: fixed dark mode issue on tailwind v4

--- a/src/app.css
+++ b/src/app.css
@@ -1,6 +1,6 @@
 @import "tailwindcss";
 
-@font-face {
+/* @font-face {
     font-family: "Asap";
     src: url("./assets/fonts/Asap-Regular.ttf") format("truetype");
     font-style: normal;
@@ -13,12 +13,21 @@
     font-weight: bold;
     font-style: normal;
     font-display: fallback;
-}
+} */
+
+@custom-variant dark (&:where(.dark, .dark *));
 
 .dark {
     color-scheme: dark;
+    --color-background: #000;
+    --color-foreground: #fff;
 }
 
 :root {
     scroll-behavior: smooth;
+}
+
+@theme {
+    --color-background: #fff;
+    --color-foreground: #000;
 }
